fix spacing for about me pic (placeholder) remove ds store

--- a/style.css
+++ b/style.css
@@ -461,7 +461,8 @@ h5, .card-body {
   }
 
   #about{
-    padding-top: 50px;
+    /* padding-top: 50px; */
+    align-items: center;
   }
 
   .content{
@@ -554,6 +555,12 @@ h5 {
 .intro2 {
   padding-top: 4%;
   width: 100%;
+}
+
+.container {
+  max-width: 100% !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 
 .content {
